Agregando cambios en Ganadores

--- a/Styles.css
+++ b/Styles.css
@@ -373,6 +373,15 @@ li {
     margin-bottom: 20px;
 }
 
+.Sorteo-2 {
+
+    margin-top: 20px;
+}
+
+.Sorteo-3 {
+
+    margin-top: 20px;
+}
 
 
 .footer {
