Boleta 32 y 46 Edilma Carvajal

--- a/Styles.css
+++ b/Styles.css
@@ -483,3 +483,17 @@ li {
 
 }
 
+
+#contenedor-2 {
+    
+    color: red;
+}
+
+#contenedor-32 {
+    
+    color: red;
+}
+
+#contenedor-46 {
+    color: red;
+}
