cambio color estado por venta Karol Martinez

--- a/Styles.css
+++ b/Styles.css
@@ -489,6 +489,16 @@ li {
     color: red;
 }
 
+#contenedor-7 {
+    
+    color: red;
+}
+
+#contenedor-21 {
+    
+    color: red;
+}
+
 #contenedor-32 {
     
     color: red;
