Boleta 06 13 40 compradas Karol Fernanda Herrera

--- a/Styles.css
+++ b/Styles.css
@@ -489,7 +489,22 @@ li {
     color: red;
 }
 
+#contenedor-6 {
+    
+    color: red;
+}
+
 #contenedor-7 {
+    
+    color: red;
+}
+
+#contenedor-13 {
+    
+    color: red;
+}
+
+#contenedor-40 {
     
     color: red;
 }
