Compra boletas 20 - 73 Edilma Carvajal

--- a/Styles.css
+++ b/Styles.css
@@ -509,6 +509,11 @@ li {
     color: red;
 }
 
+#contenedor-20 {
+    
+    color: red;
+}
+
 #contenedor-21 {
     
     color: red;
@@ -520,5 +525,10 @@ li {
 }
 
 #contenedor-46 {
+    color: red;
+}
+
+#contenedor-73 {
+    
     color: red;
 }
