Boleta comprada 12 - 96 Lizth Capera

--- a/Styles.css
+++ b/Styles.css
@@ -499,6 +499,11 @@ li {
     color: red;
 }
 
+#contenedor-12 {
+    
+    color: red;
+}
+
 #contenedor-13 {
     
     color: red;
@@ -539,6 +544,11 @@ li {
 }
 
 #contenedor-61 {
+    
+    color: red;
+}
+
+#contenedor-96 {
     
     color: red;
 }
