Compra de boletas 08 16 29 51 65 72 84 85 95

--- a/Styles.css
+++ b/Styles.css
@@ -520,6 +520,11 @@ li {
     color: red;
 }
 
+#contenedor-3 {
+    
+    color: red;
+}
+
 #contenedor-5 {
     
     color: red;
@@ -535,12 +540,22 @@ li {
     color: red;
 }
 
+#contenedor-8 {
+    
+    color: red;
+}
+
 #contenedor-12 {
     
     color: red;
 }
 
 #contenedor-13 {
+    
+    color: red;
+}
+
+#contenedor-16 {
     
     color: red;
 }
@@ -560,6 +575,11 @@ li {
     color: red;
 }
 
+#contenedor-29 {
+    
+    color: red;
+}
+
 #contenedor-32 {
     
     color: red;
@@ -569,17 +589,42 @@ li {
     color: red;
 }
 
+#contenedor-51 {
+    
+    color: red;
+}
+
+#contenedor-65 {
+    
+    color: red;
+}
+
+#contenedor-72 {
+    
+    color: red;
+}
+
 #contenedor-73 {
     
     color: red;
 }
 
-#contenedor-3 {
+#contenedor-61 {
     
     color: red;
 }
 
-#contenedor-61 {
+#contenedor-84 {
+    
+    color: red;
+}
+
+#contenedor-85 {
+    
+    color: red;
+}
+
+#contenedor-95 {
     
     color: red;
 }
