Compra de 4 boletos Herrera Diaz J.

--- a/Styles.css
+++ b/Styles.css
@@ -519,3 +519,23 @@ li {
 
     color: red;
 }
+
+#contenedor-00 {
+
+    color: red;
+}
+
+
+#contenedor-02 {
+
+    color: red;
+}
+
+#contenedor-09 {
+
+    color: red;
+}
+#contenedor-46 {
+
+    color: red;
+}
