--- a/Styles.css
+++ b/Styles.css
@@ -325,7 +325,7 @@ li {
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
-    background-color: #1f83bd;
+    background-color: #0097b2;
     border: none;
 }
 
