--- a/Styles.css
+++ b/Styles.css
@@ -270,13 +270,13 @@ li {
 
 .slick-arrow {
     border-radius: 30px;
-    background-color: #ff5931;
+    background-color: white;
     position: absolute;
     z-index: 4;
-    width: 48px;
-    height: 48px;
+    width: 50px;
+    height: 50px;
     text-align: center;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.15);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
     border: 0;
     cursor: pointer;
 
@@ -402,7 +402,14 @@ li {
     height: 50px;
     align-items: center;
     justify-content: center;
+    background-color: #1f83bd;
 
+}
+
+.footer p {
+
+    color: white;
+    font-weight: bold;
 }
 
 .Ganador-10J24 {
