--- a/Styles.css
+++ b/Styles.css
@@ -301,7 +301,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    height: 140px;
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
    
 }
@@ -529,6 +529,7 @@ li {
 
         font-size: 14px;
         padding: 10px;
+        margin: 0px
     }
 
 }
