cambiando propiedades responsive 320px

--- a/Styles.css
+++ b/Styles.css
@@ -514,6 +514,8 @@ li {
     .RulesGame {
 
         justify-content: center;
+        padding: 5px;
+        font-size: 14px;
     }
 
     .SpecialBox h2 {
