Compra boleta Eduardo 27,19,16

--- a/Styles.css
+++ b/Styles.css
@@ -578,3 +578,18 @@ li {
 
     color: red;
 }
+
+#contenedor-27 {
+
+    color: red;
+}
+
+#contenedor-19 {
+
+    color: red;
+}
+
+#contenedor-16 {
+
+    color: red;
+}
