--- a/Styles.css
+++ b/Styles.css
@@ -367,7 +367,8 @@ li {
 .containerGanadores {
 
     padding: 50px;
-    background-color: #f2f3f3;
+    background-color: white;
+    text-align: justify;
 }
 
 .titleGanadores {
@@ -376,14 +377,48 @@ li {
     margin-bottom: 20px;
 }
 
+
+.Sorteo-1 h2 {
+
+    border: 1px solid #f0f2f5;
+    margin-bottom: 10px;
+    padding-left: 5px;
+    background-color:#0097b2;
+    border-radius: 5px;
+    color: #ffff;
+}
+
+
 .Sorteo-2 {
 
     margin-top: 20px;
 }
 
+
+.Sorteo-2 h2 {
+
+    border: 1px solid #f0f2f5;
+    margin-bottom: 10px;
+    padding-left: 5px;
+    background-color:#0097b2;
+    border-radius: 5px;
+    color: #ffff;
+}
+
 .Sorteo-3 {
 
     margin-top: 20px;
+}
+
+
+.Sorteo-3 h2 {
+
+    border: 1px solid #f0f2f5;
+    margin-bottom: 10px;
+    padding-left: 5px;
+    background-color:#0097b2;
+    border-radius: 5px;
+    color: #ffff;
 }
 
 .social p {
@@ -417,7 +452,6 @@ li {
     margin-top: 15px;
     padding: 10px;
     text-align: center;
-    box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
 
 }
 
@@ -545,61 +579,10 @@ li {
         display: flex;
     }
 
-}
+    .Ganador-10J24 img {
 
+        height: 250px;
+        width: 210px;
+    }
 
-#contenedor-24 {
-
-    color: red;
-}
-
-#contenedor-0 {
-
-    color: red;
-}
-
-
-#contenedor-4 {
-
-    color: red;
-}
-
-
-#contenedor-3 {
-
-    color: red;
-}
-
-#contenedor-9 {
-
-    color: red;
-}
-#contenedor-46 {
-
-    color: red;
-}
-
-#contenedor-27 {
-
-    color: red;
-}
-
-#contenedor-19 {
-
-    color: red;
-}
-
-#contenedor-16 {
-
-    color: red;
-}
-
-#contenedor-12 {
-
-    color: red;
-}
-
-#contenedor-17 {
-
-    color: red;
 }
