Agregando cambios a nosotros

--- a/Styles.css
+++ b/Styles.css
@@ -352,7 +352,7 @@ li {
 
 .containerEstrategia {
 
-    height: 100vh;
+    min-height: 100vh;
     padding: 50px;
     background-color: #f2f3f3;
 
@@ -388,6 +388,10 @@ li {
     color: #ffff;
 }
 
+.Sorteo-1 a {
+
+    text-decoration: none;
+}
 
 .Sorteo-2 {
 
