cambiando fondo en enlace nosotros

--- a/Styles.css
+++ b/Styles.css
@@ -354,7 +354,7 @@ li {
 
     min-height: 100vh;
     padding: 50px;
-    background-color: #f2f3f3;
+    background-color: white;
     text-align: justify;
 
 }
