--- a/Styles.css
+++ b/Styles.css
@@ -60,26 +60,31 @@ body {
 
 .SpecialBox {
 
-    display: grid;
+    display:flex;
     background-image: url('./images/image_principal.jpg');
     height: 400px;
     padding: 20px;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     
 }
 
-.SpecialBox h2 {
+.SpecialBox h3 {
 
-    display: flex;
-    letter-spacing: 0.1em;
+    background-color: #ffffff6b;
+    text-shadow: -0.1px -0.1px white, 0.3px 0.3px #333
+
 }
 
-.valorColor {
+.containerSpecialBox {
 
-    color: red;
+    text-align: center;
 }
 
+.ganadorRifa h3  {
+
+    box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
+}
 
 // Watch // 
 
@@ -90,6 +95,7 @@ p {
 
 }
 
+/*
 .reloj {
 
     color: black;   
@@ -111,6 +117,8 @@ p {
     letter-spacing: 0.1em;
 
 }
+
+*/
 
 .Boleteria {
 
@@ -302,7 +310,6 @@ li {
     justify-content: center;
     align-items: center;
     height: 140px;
-    box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
    
 }
 
@@ -395,6 +402,16 @@ li {
     text-decoration: none;
 }
 
+.Sorteo-2 a {
+
+    text-decoration: none;
+}
+
+.Sorteo-3 a {
+
+    text-decoration: none;
+}
+
 .Sorteo-2 {
 
     margin-top: 20px;
@@ -482,9 +499,10 @@ li {
     .containerSpecialBox {
 
         text-align: center;
-        display: ruby;
+        
     }
 
+    /*
     .reloj {
 
     margin-top: 20px;
@@ -493,6 +511,8 @@ li {
     font-weight: 600;
 
     }
+
+    */
 
     .CallToAction {
         box-shadow: none;
@@ -504,15 +524,10 @@ li {
         justify-content: center;
     }
 
-    .SpecialBox h2 {
+    .SpecialBox h3 {
 
         background-color: #ffffff6b;
-        text-shadow: -1px -1px white, 1px 1px #333
-    }
-
-    .ganadorRifa h2 {
-
-        letter-spacing: 0;
+        text-shadow: -0.1px -0.1px white, 0.3px 0.3px #333;
     }
 
     .Ganador-10J24 {
@@ -540,7 +555,7 @@ li {
     .containerSpecialBox {
 
         text-align: center;
-        display: ruby;
+    
     }
 
     .reloj {
@@ -563,15 +578,10 @@ li {
         font-size: 14px;
     }
 
-    .SpecialBox h2 {
+    .SpecialBox h3 {
 
         background-color: #ffffff6b;
-        text-shadow: -1px -1px white, 1px 1px #333
-    }
-
-    .ganadorRifa h2 {
-
-        letter-spacing: 0;
+        text-shadow: -0.1px -0.1px white, 0.3px 0.3px #333;
     }
 
     .social {
