Agragando cambios UI responsive 320 home

--- a/Styles.css
+++ b/Styles.css
@@ -558,6 +558,7 @@ li {
     
     }
 
+    /*
     .reloj {
 
     margin-top: 20px;
@@ -566,6 +567,8 @@ li {
     font-weight: 600;
 
     }
+
+    */
 
     .CallToAction {
         box-shadow: none;
