cambiando backgound-image principal

--- a/Styles.css
+++ b/Styles.css
@@ -61,7 +61,7 @@ body {
 .SpecialBox {
 
     display:flex;
-    background-image: url('./images/image_principal.jpg');
+    background-image: url('./images/Images_Secundaria.png');
     height: 400px;
     padding: 20px;
     justify-content: center;
