--- a/Styles.css
+++ b/Styles.css
@@ -60,7 +60,7 @@ body {
 .SpecialBox {
 
     display:grid;
-    background-image: url('./images/prueba.jpg');
+    background-image: url('./images/image_secundaria.png');
     text-align: center;
     height: 300px;
     padding: 20px;
@@ -69,18 +69,15 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    color: white;
     
 }
 
-.important {
-    background-color: #ffffff6b;
-    text-shadow: -0.1px -0.1px white, 0.3px 0.3px #333;
+
+.SpecialBox h3 {
+    margin-bottom: 5px;
 }
 
-.ganadorRifa h3  {
-
-    box-shadow: 50px 1px 2px rgb(0, 0, 0, 0.1);
-}
 
 // Watch // 
 
@@ -283,7 +280,7 @@ li {
 
 .buscar-button {
 
-    background-color:  #1f83bd;
+    background-color:  #ff5931;
 }
 
 .slick-prev {
@@ -309,6 +306,7 @@ li {
     color: #f9f9f9;
     font-size: 16px;
     font-weight: bold;
+    text-align: center;
 }
 
 .comprar {
@@ -318,7 +316,9 @@ li {
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
-    background-color:#1f83bd;
+    background-color:#ff5931;
+    border: none;
+}
     border: none;
 }
 
@@ -536,11 +536,6 @@ li {
 
         text-align: center;
     
-    }
-
-    .SpecialBox {
-
-        height: 325px;
     }
 
     /*
