--- a/Styles.css
+++ b/Styles.css
@@ -2,17 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100; 0,300; 0,400; 0,500; 0,700; 0,900; 1,100; 1,300; 1,400; 1,500; 1,700; 1.900&display=swap');
 
 * { 
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+
 }
 
 body {
+
     min-height: 100vh;
     max-width: 100vw;
     margin: 0 auto;
-    
+
 }
 
 
@@ -35,18 +38,23 @@ body {
 }
 
 .RulesGame ul li {
+
     list-style: none;
+
 }
 
 .RulesGame li {
+
     margin-left: 10px;
+
 }
 
 .RulesGame a {
+
     text-decoration: none;
     color: white;
     font-weight: bold;
-    
+
 }
 
 
@@ -60,7 +68,7 @@ body {
 .SpecialBox {
 
     display:grid;
-    background-image: url('./images/image_secundaria.png');
+    background-image: url('./images/images_secundaria.png');
     text-align: center;
     height: 300px;
     padding: 20px;
@@ -75,11 +83,9 @@ body {
 
 
 .SpecialBox h3 {
+
     margin-bottom: 5px;
 }
-
-
-// Watch // 
 
 p {
 
@@ -87,31 +93,6 @@ p {
     padding:0px;    
 
 }
-
-/*
-.reloj {
-
-    color: black;   
-    width: 205px;
-    height: 40px;
-    background: #ffff;
-    
-}
-
-.fecha {
-    
-    
-    letter-spacing: 0.1em;
-    
-}
-
-.tiempo {
-
-    letter-spacing: 0.1em;
-
-}
-
-*/
 
 .image {
 
@@ -125,8 +106,8 @@ p {
     margin-top: 15px;
     height: 120px;
     padding: 20px;
-}
 
+}
 
 .buscar-input {
 
@@ -152,11 +133,9 @@ p {
     cursor: pointer;
     transition: all 0.3s ease;
 
-
 }
 
 .estadoLoad {
-
 
     display: flex;
     flex-wrap: wrap;
@@ -168,17 +147,20 @@ li {
     list-style: none;
 
 }
+
 .slick ul {
 
     display: block;
     text-align: center;
     margin-top: 10px;
+
 }
 
 .results {
 
     list-style: none;
     margin-top: 20px;
+
 }
 
 .results li {
@@ -190,7 +172,6 @@ li {
     margin-bottom: 10px;
     color: #333;
     font-size: 16px;
-
 
 }
 
@@ -228,12 +209,14 @@ li {
 }
 
 .slick-track {
+
     position: relative;
     top: 0;
     left: 0;
     display: flex;
     justify-content: center;
     transition: .5s ease-in-out;
+
 }
 
 .slick {
@@ -257,6 +240,7 @@ li {
     border-radius: 4px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
     transition: .3s ease-in-out;
+
 }
 
 .slick-arrow {
@@ -281,14 +265,19 @@ li {
 .buscar-button {
 
     background-color:  #ff5931;
+
 }
 
 .slick-prev {
+
     left: 0px;
+
 }
 
 .slick-next {
+
     right: 0px;
+
 }
 
 .CallToAction {
@@ -307,6 +296,7 @@ li {
     font-size: 16px;
     font-weight: bold;
     text-align: center;
+
 }
 
 .comprar {
@@ -318,13 +308,13 @@ li {
     box-shadow: 0px 2px 10px rgb(0, 0, 0, 0.1);
     background-color:#ff5931;
     border: none;
-}
-    border: none;
+
 }
 
 .comprar a  {
 
     padding: 10px 40px 11px;
+
 }
 
 .ContainerRuleGame {
@@ -361,6 +351,7 @@ li {
 
     text-align: center;
     margin-bottom: 20px;
+
 }
 
 .containerGanadores {
@@ -376,7 +367,6 @@ li {
     margin-bottom: 20px;
 }
 
-
 .Sorteo-1 h3 {
 
     border: 1px solid #f0f2f5;
@@ -387,44 +377,18 @@ li {
     color: #ffff;
 }
 
-.Sorteo-1 a {
+.Sorteo-1 a, .Sorteo-2 a, .Sorteo-3 a {
 
     text-decoration: none;
 }
 
-.Sorteo-2 a {
-
-    text-decoration: none;
-}
-
-.Sorteo-3 a {
-
-    text-decoration: none;
-}
-
-.Sorteo-2 {
+.Sorteo-2, .Sorteo-3 {
 
     margin-top: 20px;
 }
 
 
-.Sorteo-2 h3 {
-
-    border: 1px solid #f0f2f5;
-    margin-bottom: 10px;
-    padding-left: 5px;
-    background-color:#0097b2;
-    border-radius: 5px;
-    color: #ffff;
-}
-
-.Sorteo-3 {
-
-    margin-top: 20px;
-}
-
-
-.Sorteo-3 h3 {
+.Sorteo-2 h3, .Sorteo-3 h3 {
 
     border: 1px solid #f0f2f5;
     margin-bottom: 10px;
@@ -435,9 +399,11 @@ li {
 }
 
 .social p {
+
     text-align: center;
     font-weight: bold;
     color: black;
+
 }
 
 .footer {
@@ -488,30 +454,24 @@ li {
         
     }
 
-    /*
-    .reloj {
-
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: #ffffff6b;
-    font-weight: 600;
-
-    }
-
-    */
-
     .CallToAction {
+    
         box-shadow: none;
+    
     }
 
     .RulesGame {
+
         padding: 0;
         margin: 0 auto;
         justify-content: center;
+
     }
 
     .Ganador-10J24 {
+
         display: flex;
+
     }
 
 }
@@ -519,7 +479,6 @@ li {
 
 
 @media screen and (min-width : 320px) and (max-width : 374px) {
-
 
     .search{
 
@@ -530,6 +489,7 @@ li {
     .search button {
 
         margin-top: 10px;
+    
     }
 
     .containerSpecialBox {
@@ -538,20 +498,10 @@ li {
     
     }
 
-    /*
-    .reloj {
-
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: #ffffff6b;
-    font-weight: 600;
-
-    }
-
-    */
-
     .CallToAction {
+
         box-shadow: none;
+
     }
 
     .RulesGame {
@@ -559,27 +509,34 @@ li {
         justify-content: center;
         padding: 5px;
         font-size: 14px;
+
     }
 
     .social {
 
         font-size: 14px;
         padding: 10px;
-        margin: 0px
+        margin: 0px;
+    
     }
 
     .Ganador-10J24 {
+    
         display: flex;
+
     }
 
     .Ganador-10J24 img {
 
         height: 250px;
         width: 210px;
+
     }
 
     .buscar-input {
+
         width: 140px;
+
     }
 
 }
