--- a/Styles.css
+++ b/Styles.css
@@ -542,7 +542,7 @@ li {
 }
 
 
-#contenedor-2, #contenedor-3, #contenedor-9, #contenedor-12 {
+#contenedor-0, #contenedor-22, #contenedor-27, #contenedor-30, #contenedor-61,  #contenedor-2,  #contenedor-3, #contenedor-9, #contenedor-12 {
 
     color: red;
 }
