--- a/Styles.css
+++ b/Styles.css
@@ -189,27 +189,25 @@ li {
     padding: 15px 15px;
     cursor: pointer;
     margin: 2px;
-
+    border-radius: 10px;
+    background-color: #0097b2;
+    box-shadow: 0px 0px 0px 0px #fff9, 0px 0px 0px 0px #fff9,
+    0px 0px 0px 0px #0001, 0px 0px 0px 0px #0001, inset -8px -8px 20px 0px #fff9,
+   
 
 }
 
-margin: 0;
-    display: flex;
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+.text-boletos {
 
-.carrousel h2 {
+    padding: 5px;
+}
 
-    font-size: 26px;
-    line-height: 38px;
-    padding-bottom: 24px;
-    opacity: -9;
-    text-transform: uppercase;
-    letter-spacing: 10px;
-    text-align: center;
+button a {
+
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 700;
+    color: white;
 }
 
 .slick-list {
@@ -459,6 +457,10 @@ margin: 0;
 @media screen and (min-width : 375px) and (max-width : 480px) {
 
 
+    .containerBoleteria {
+        margin: 0px;
+    }
+
     .search{
 
         margin-top: 15px;
@@ -497,6 +499,10 @@ margin: 0;
 
 @media screen and (min-width : 320px) and (max-width : 374px) {
 
+    .containerBoleteria {
+
+        margin: 0px;
+    }
     .search{
 
         margin-top: 0px;
