--- a/Styles.css
+++ b/Styles.css
@@ -193,7 +193,6 @@ li {
     background-color: #0097b2;
     box-shadow: 0px 0px 0px 0px #fff9, 0px 0px 0px 0px #fff9,
     0px 0px 0px 0px #0001, 0px 0px 0px 0px #0001, inset -8px -8px 20px 0px #fff9,
-   
 
 }
 
@@ -209,6 +208,15 @@ button a {
     font-weight: 700;
     color: white;
 }
+
+.Button-01:hover{
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    box-shadow: 0px 0px 15px 15px #ec731e;
+    -webkit-box-shadow: 0px 0px 15px 15px #ec731e;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    }
 
 .slick-list {
 
