--- a/Styles.css
+++ b/Styles.css
@@ -16,9 +16,7 @@ body {
     max-width: 100vw;
     margin: 0 auto;
 
-
 }
-
 
 
 .RulesGame {
@@ -32,11 +30,6 @@ body {
 
 }
 
-.ganadorRifa {
-
-    margin-bottom: 10px;
-
-}
 
 .RulesGame ul li {
 
@@ -68,25 +61,23 @@ body {
 
 .SpecialBox {
 
-    display:grid;
-    background-image: url('./images/images_secundaria.png');
-    text-align: center;
-    height: 300px;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    background-image: url("/images/images_principal.jpg");
+    width: 100vw;
+    height: 250px;
+    background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    
+    background-size:cover;
+}
+
+.containerSbox {
+
+    text-align: center;
+    margin-top: 50px;
 }
 
 
-.SpecialBox h3 {
 
-    margin-bottom: 5px;
-}
 
 p {
 
