compra de b-12 Edilma Carvajal

--- a/Styles.css
+++ b/Styles.css
@@ -619,6 +619,6 @@ button a {
 }
 
 
-#b-30, #b-23, #b-21, #b-05, #b-02, #b-20 {
+#b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12 {
     background-color: red;
 }
