--- a/Styles.css
+++ b/Styles.css
@@ -622,3 +622,7 @@ button a {
 #b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12 {
     background-color: red;
 }
+
+#b-96, #b-75, #b-72, #b-52, #b-53, #b-29 {
+    background-color: red;
+}
