--- a/Styles.css
+++ b/Styles.css
@@ -619,9 +619,10 @@ button a {
 }
 
 
-#b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12 {
+#b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12, #b-10, #b-37, #b-28, #b-70 {
     background-color: red;
 }
+
 
 #b-96, #b-75, #b-72, #b-52, #b-53, #b-29 {
     background-color: red;
