b-50-13-85 Amigas pipe - b-09-17 Aleja Gomez

--- a/Styles.css
+++ b/Styles.css
@@ -619,7 +619,7 @@ button a {
 }
 
 
-#b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12, #b-10, #b-37, #b-28, #b-70 {
+#b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12, #b-10, #b-37, #b-28, #b-70, #b-50, #b-13, #b-85 {
     background-color: red;
 }
 
