actualizando proximo sorteo

--- a/Styles.css
+++ b/Styles.css
@@ -619,11 +619,7 @@ button a {
 }
 
 
-#b-30, #b-23, #b-21, #b-05, #b-02, #b-20, #b-12, #b-10, #b-37, #b-28, #b-70, #b-50, #b-13, #b-85, #b-09, #b-17 {
-    background-color: red;
+#b-21, #b-23, #b-17 {
+    background-color: #ff5931;
 }
 
-
-#b-96, #b-75, #b-72, #b-52, #b-53, #b-29 {
-    background-color: red;
-}
